--- a/instrumented_app/Dockerfile
+++ b/instrumented_app/Dockerfile
@@ -1,4 +1,4 @@
 FROM golang:onbuild
 COPY instrumented_app /app
 EXPOSE 8080 
-ENTRYPOINT ["/usr/bin/selenoid"]
+ENTRYPOINT ["/app/instrumented_app"]
