--- a/instrumented_app/Dockerfile
+++ b/instrumented_app/Dockerfile
@@ -1,7 +1,5 @@
 FROM scratch
-RUN mkdir -p /app
-COPY instrumented_app /app
-WORKDIR /app
+COPY instrumented_app /
 EXPOSE 8080 
 ENTRYPOINT ["/instrumented_app"]
 
